src/test/ui/typeck/issue-81943.stderr
error[E0308]: mismatched types
  --> $DIR/issue-81943.rs:3:9
   |
LL |   f(|x| dbg!(x));
   |         ^^^^^^^ expected `()`, found `i32`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/issue-81943.rs:4:28
   |
LL |   f(|x| match x { tmp => { tmp } });
   |         -------------------^^^----- help: consider using a semicolon here
   |         |                  |
   |         |                  expected `()`, found `i32`
   |         expected this to be `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
